# ChangeLog for dev-java/jgoodies-common
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jgoodies-common-1.8.0 (10 Jul 2014)

  10 Jul 2014; Johann Schmitz <ercpe@gentoo.org> +jgoodies-common-1.8.0.ebuild,
  +metadata.xml:
  Ebuild for jgoodies-common